fixed some things on mobile, fixed footer vs. main widths

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -3,12 +3,13 @@
 .footer-wrapper {
 	border-top: 1px solid #eee; 
 	margin-top: 1.5rem; 
+	max-width: 55rem; 
 	padding: 1.5rem 0 2.5rem 0; 
 	p {
 		font-size: .875rem; 
 	}
 	.social-icons {
-		text-align: right;
+		margin-top: 1rem; 
 		a {
 			border-bottom: 0; 
 			padding: .25rem;
@@ -27,5 +28,12 @@
 				}
 			}
 		}
+	}
+}
+
+@media (min-width: 40em) { 
+	.social-icons {
+		margin-top: 0; 
+		text-align: right;
 	}
 }
